--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.483.0",
     "marked": "^15.0.7",
     "openai": "^4.89.0",
     "react": "^19.0.0",
