--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,7 +14,8 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["src"]
 }
