--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "lucide-react": "^0.483.0",
     "marked": "^15.0.7",
     "openai": "^4.89.0",
