--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.1",
+    "dompurify": "^3.2.4",
     "lucide-react": "^0.483.0",
     "marked": "^15.0.7",
     "openai": "^4.89.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.4.1",
     "workbox-window": "^7.3.0"
   },
   "devDependencies": {
