--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,7 +5,8 @@
     "lib": ["ES2023"],
     "esModuleInterop": true,
     "noEmit": true,
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
-  "include": ["server", "scripts"]
+  "include": ["back-end"]
 }
